Fixes
Fixed issues with links and the z-index in the container. Changed
photoswipe to only 1 img for a gallery. Setup the layout to be used for
main content. Still have problems with the footer being overlapped by
container.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,9 @@ header {
 	height: 30px;
 	width: 100%;
 	position: fixed;
+	box-shadow: 0px 0px 10px #6E6E6E;
 	font-family: "Carrois Gothic", sans-serif;
+	z-index: 99999;
 }
 
 	nav {
@@ -36,8 +38,6 @@ header {
 		padding-left: 1180px;
 		height: 30px;
 		width: 100%;
-		position: absolute;
-		z-index: 10;
 	}
 		nav ul{
 			margin: 0px;
@@ -52,7 +52,7 @@ header {
 	font-size: 42px;
 	position: relative;
 	top: 30px;
-	z-index: -1;
+
 }
 	#logo #fName {
 		color: #D12E39;
@@ -85,19 +85,32 @@ body {
 	top: 30px;
 	width: 960px;
 	height: 100%;
-	z-index: -1;
 }
+.container ul.gallery { float: left; width: 33.33333333%; }
 
 .gallery { list-style: none; padding: 0; margin: 0; }
 .gallery:after { clear: both; content: "."; display: block; height: 0; visibility: hidden; }
-.gallery li { float: left; width: 320px; }
-.gallery li a { display: block; margin: 5px; border: 1px solid #3c3c3c; } 
+.gallery li a { display: block; margin: 5px; border: 0px solid #3c3c3c;}
 .gallery li img { display: block; width: 100%; height: auto; }
+
+#Gallery1, #Gallery2 {
+	clear: both;
+}
+
+.description {
+	float: right;
+	background: #B6D149;
+	height: 250px;
+	margin-top: 90px;
+	padding: 10px;
+}
 
 #info {
 	background: #B6D149;
-	height: 250px;
+	height: 200px;
 	width: 960px;
+	margin-top: 60px;
+	clear: both;
 }
 
 #info h2 {
@@ -105,13 +118,14 @@ body {
 }
 
 #info p {
-
+	margin: 10px;
 }
 
 footer {
+	width: 100%;
 	background: #2E2E2E;
 	color: #EEEEEE;
-	z-index: 10;
+	clear: both;
 }
 
 #social {
